data/derived/comb/progs/unify/prog0635.ml.out
Characters 82-83:
  List.fold_left f base fs;;
                 ^
Error: This expression has type (('a -> 'b) -> 'a) -> ('a -> 'b) -> 'b
       but an expression was expected of type
         (('a -> 'b) -> 'a) -> ('a -> 'b) -> ('a -> 'b) -> 'a
       The type variable 'b occurs inside ('a -> 'b) -> 'a
